[package]
name = "fusarium"
version = "0.1.0"
edition = "2018"
authors = ["Gatlin Newhouse"]
description = "Fusarium, named after the fungi that affects corn (and its kernels), is an OS Kernel"
readme = "./README.md"

[dependencies]
bootloader = { version = "0.9", features = [
  "map_physical_memory",
], optional = true }
volatile = { version = "0.2.6" }
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = { version = "0.9.8" }
x86_64 = { version = "0.14.2", optional = true }
uart_16550 = { version = "0.2.0", optional = true }
pic8259 = { version = "0.10.1", optional = true }
pc-keyboard = { version = "0.7.0" }
linked_list_allocator = { version = "0.10.x", optional = true }
critical-section = { version = "1.2.0", optional = true, default-features = false }
rpi = { git = "https://github.com/carloskiki/rpi-devenv.git", optional = true }

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[features]
default = ["x86_64-qemu"]

# Hardware targets
x86_64-qemu = [
  "alloc-linked-list",
  "exec-mine",
  "pic8259",
  "dep:bootloader",
  "dep:x86_64",
  "dep:uart_16550",
]
pico-zero-w = ["armv6a", "exec-simple"]

# Hardware options
pic8259 = ["dep:pic8259"]
armv6a = [
  "dep:rpi",
  "dep:critical-section",
  "critical-section/restore-state-bool",
]

# Feature config
alloc-linked-list = ["dep:linked_list_allocator"]
alloc-bump = []
alloc-my-free-list = []
alloc-fixed-block = ["dep:linked_list_allocator"]
exec-simple = []
exec-mine = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "address_translation"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "doublefault"
harness = false

[[test]]
name = "pagefault"
harness = false

[[test]]
name = "stack_overflow"
harness = false
