[package]
name = "fusarium"
version = "0.1.0"
edition = "2018"
authors = ["Gatlin Newhouse"]
description = "Fusarium, named after the fungi that affects corn (and its kernels), is an OS Kernel"
readme = "./README.md"

# Common dependencies
[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
pc-keyboard = { version = "0.7.0" }
spin = { version = "0.9.8" }
volatile = { version = "0.2.6" }

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.embedded-alloc]
version = "0.6.0"
default_features = false
optional = true

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.linked_list_allocator]
version = "0.10.x"
optional = true

# Target specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
pic8259 = { version = "0.10.1" }
x86_64 = { version = "0.14.2" }
uart_16550 = { version = "0.2.0" }

[target.'cfg(target_arch = "arm")'.dependencies]
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }

[features]
default = [
  #"alloc-bump",
  #"alloc-embedded-llff",
  #"alloc-embedded-tlsf",
  #"alloc-fixed-block",
  "alloc-linked-list",
  #"alloc-my-free-list",
  "exec-mine",
  #"exec-simple",
]

# Feature config
alloc-bump = []
alloc-embedded-llff = ["dep:embedded-alloc", "embedded-alloc/llff"]
alloc-embedded-tlsf = ["dep:embedded-alloc", "embedded-alloc/tlsf"]
alloc-fixed-block = ["dep:linked_list_allocator"]
alloc-linked-list = ["dep:linked_list_allocator"]
alloc-my-free-list = []
exec-simple = []
exec-mine = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "address_translation"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "doublefault"
harness = false

[[test]]
name = "pagefault"
harness = false

[[test]]
name = "stack_overflow"
harness = false
