[package]
name = "fusarium"
version = "0.1.0"
edition = "2018"
authors = ["Gatlin Newhouse"]
description = "Fusarium, named after the fungi that affects corn (and its kernels), is an OS Kernel"
readme = "./README.md"

# Common dependencies
[dependencies]
lazy_static = { version = "1.0", features = ["spin_no_std"] }
linked_list_allocator = { version = "0.10.x" }
pc-keyboard = { version = "0.7.0" }
spin = { version = "0.9.8" }
volatile = { version = "0.2.6" }

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

# Target specific dependencies
[target.'cfg(target_arch = "arm")'.dependencies]
aarch64-cpu = { version = "10.0.0" }
arm-pl011-uart = { version = "0.2.0", features = [] }
#critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
embedded-alloc = { version = "0.6.0", default-features = false }
#rpi = { path = "./deps/rpi-devenv" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
pic8259 = { version = "0.10.1" }
uart_16550 = { version = "0.2.0" }
x86_64 = { version = "0.14.2" }

# Feature config
[features]
default = ["armv6a"]

# Hardware configs
armv6a = [
  #"alloc-embedded-llff",
  #"alloc-embedded-tlsf",
  "alloc-linked-list",
  #"exec-mine",
  #"exec-simple",
]
x86_64 = [
  #"alloc-bump",
  #"alloc-fixed-block",
  "alloc-linked-list",
  #"alloc-my-free-list",
  "exec-mine",
  #"exec-simple",
]

# Allocator and exec choices
alloc-bump = []
alloc-embedded-llff = ["embedded-alloc/llff"]
alloc-embedded-tlsf = ["embedded-alloc/tlsf"]
alloc-fixed-block = []
alloc-linked-list = []
alloc-my-free-list = []
exec-simple = []
exec-mine = []

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = [
  "-device",
  "isa-debug-exit,iobase=0xf4,iosize=0x04",
  "-serial",
  "stdio",
  "-display",
  "none",
]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "address_translation"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "doublefault"
harness = false

[[test]]
name = "pagefault"
harness = false

[[test]]
name = "stack_overflow"
harness = false
